--- a/cookbook/named-views.html
+++ b/cookbook/named-views.html
@@ -9,8 +9,8 @@
         <script src="https://unpkg.com/vue"></script>
         <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
         <script src="../dist/ionic-vue.js"></script>
-        <script src="https://unpkg.com/@ionic/core@4.0.0-alpha.11/dist/ionic.js"></script>
-        <link rel="stylesheet" href="https://unpkg.com/@ionic/core@4.0.0-alpha.11/css/ionic.min.css"/>
+        <script src="https://unpkg.com/@ionic/core@4.0.0-beta.0/dist/ionic.js"></script>
+        <link rel="stylesheet" href="https://unpkg.com/@ionic/core@4.0.0-beta.0/css/ionic.min.css"/>
     </head>
 
     <body>
