--- a/cookbook/custom-transitions.html
+++ b/cookbook/custom-transitions.html
@@ -10,7 +10,7 @@
         <script>window.disableIonicTransitions = true</script>
         <script src="https://unpkg.com/vue"></script>
         <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
-        <script src="https://unpkg.com/@modus/ionic-vue@1.0.5/dist/ionic-vue.js"></script>
+        <script src="https://unpkg.com/@modus/ionic-vue@latest/dist/ionic-vue.js"></script>
         <script src="https://unpkg.com/@ionic/core@4.0.0-beta.2/dist/ionic.js"></script>
         <link rel="stylesheet" href="https://unpkg.com/@ionic/core@4.0.0-beta.2/css/ionic.min.css"/>
         <style>
