Fix cookbook titles

--- a/cookbook/custom-transitions.html
+++ b/cookbook/custom-transitions.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Ionic v4 + Vue.js - Basic routing</title>
+        <title>Ionic v4 + Vue.js - Custom transitions</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
