--- a/cookbook/named-views-transitions.html
+++ b/cookbook/named-views-transitions.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Ionic v4 + Vue.js - Routing with named views</title>
+        <title>Ionic v4 + Vue.js - Transitions with named views</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
