Update ionic css

--- a/cookbook/index.html
+++ b/cookbook/index.html
@@ -10,7 +10,7 @@
         <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
         <script src="https://unpkg.com/@modus/ionic-vue@latest/dist/ionic-vue.js"></script>
         <script src="https://unpkg.com/@ionic/core@latest/dist/ionic.js"></script>
-        <link rel="stylesheet" href="https://unpkg.com/@ionic/core@latest/css/ionic.min.css"/>
+        <link rel="stylesheet" href="https://unpkg.com/@ionic/core@latest/css/ionic.bundle.css"/>
     </head>
 
     <body>
